--- a/natacion-back/package.json
+++ b/natacion-back/package.json
@@ -10,6 +10,9 @@
   "author": "Juan Pablo Capilla",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.4",
     "nodemon": "^2.0.20"
   }
 }
