--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.4",
     "react-router-dom": "^6.4.0",
